--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6">
             <div class="hero-content" data-aos="fade-up" data-aos-delay="200">
-              <h2>Strategic Solutions for Business Growth</h2>
+              <h2>BC HAIR FACTORY - SLAVIC QUALITY</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
               <div class="hero-btns">
                 <a href="#contact" class="btn btn-primary">Get a Free Consultation</a>
