--- a/index.html
+++ b/index.html
@@ -38,15 +38,12 @@
 
 <body class="index-page">
 
-  <header id="header" class="header d-flex align-items-center sticky-top">
-    <div class="container-fluid container-xl position-relative d-flex align-items-center">
-
-      <a href="index.html" class="logo d-flex align-items-center me-auto">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.webp" alt=""> -->
-        <h1 class="sitename"><span>e</span>Business</h1>
-      </a>
-
+  <header id="header" class="header sticky-top">
+  <div class="container-fluid container-xl d-flex justify-content-between align-items-start">
+    <a href="index.html" class="logo d-flex" style="align-items: flex-start;">
+      <img src="assets/img/logoBC.png" style="height: 80px; max-height: none;">
+    </a>
+    <div class="d-flex align-items-center gap-3">
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
@@ -75,11 +72,13 @@
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
       <a class="btn-getstarted" href="index.html#about">Get Started</a>
 
-    </div>
-  </header>
+    </div> 
+
+  </div>
+</header>
+
 
   <main class="main">
 
@@ -90,7 +89,7 @@
           <div class="col-lg-6">
             <div class="hero-content" data-aos="fade-up" data-aos-delay="200">
               <h2>BC HAIR FACTORY - SLAVIC QUALITY</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>BC HAIR FACTORY – SLAVIC QUALITY is a premium hair supplier specializing in 100% natural Slavic hair extensions and wigs. We proudly operate as a direct manufacturer, offering top-tier hair quality, trusted by professional salons and stylists worldwide.</p>
               <div class="hero-btns">
                 <a href="#contact" class="btn btn-primary">Get a Free Consultation</a>
                 <a href="#services" class="btn btn-outline">Our Services</a>
@@ -101,7 +100,7 @@
                   <p>Years Experience</p>
                 </div>
                 <div class="stat-item">
-                  <h3><span data-purecounter-start="0" data-purecounter-end="500" data-purecounter-duration="1" class="purecounter"></span>+</h3>
+                  <h3><span data-purecounter-start="0" data-purecounter-end="5000" data-purecounter-duration="1" class="purecounter"></span>+</h3>
                   <p>Clients Worldwide</p>
                 </div>
                 <div class="stat-item">
