--- a/index.html
+++ b/index.html
@@ -39,45 +39,63 @@
 <body class="index-page">
 
   <header id="header" class="header sticky-top">
-  <div class="container-fluid container-xl d-flex justify-content-between align-items-start">
-    <a href="index.html" class="logo d-flex" style="align-items: flex-start;">
+  <div class="container-fluid container-xl d-flex justify-content-between align-items-center">
+
+    <!-- Logo -->
+    <a href="index.html" class="logo d-flex align-items-center">
       <img src="assets/img/logoBC.png" style="height: 80px; max-height: none;">
     </a>
-    <div class="d-flex align-items-center gap-3">
-      <nav id="navmenu" class="navmenu">
-        <ul>
-          <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul>
-          </li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-      </nav>
-      <a class="btn-getstarted" href="index.html#about">Get Started</a>
+    <!-- Menu + Get Started -->
+    <nav id="navmenu" class="navmenu">
+      <ul>
+        <li><a href="#hero" class="active">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li class="dropdown"><a href="#"><span>Product</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <ul>
 
-    </div> 
+            <li class="dropdown"><a href="#"><span>Keratin Hair Extensions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <ul>
+                <li><a href="#">Flat-Tip</a></li>
+                <li><a href="#">I-Tip</a></li>
+                <li><a href="#">Nano-ring</a></li>
+              </ul>
+            </li>
+            <li class="dropdown"><a href="#"><span>Weft Hair Extensions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <ul>
+                <li><a href="#">Machine Weft</a></li>
+                <li><a href="#">Genius Weft</a></li>
+                <li><a href="#">Hand-tied Weft</a></li>
+                <li><a href="#">Butterfly Weft</a></li>
+              </ul>
+            </li>
+            <li class="dropdown"><a href="#"><span>Tape-in Hair Extensions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <ul>
+                <li><a href="#">Invisible Tape-in</a></li>
+                <li><a href="#">Regular Tape-in</a></li>
+              </ul>
+            </li>
+            <!-- <li><a href="#">Dropdown 2</a></li> -->
+          </ul>
+        </li>
+        <li><a href="#services">Service</a></li>
+        
+        <!-- <li><a href="#team">Tape-in Hair Extensions</a></li> -->
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#portfolio">News & articles</a></li>
+      </ul>
+    </nav>
 
+    <!-- Get Started + Icon menu -->
+    <div class="d-flex align-items-center">
+      <i class="mobile-nav-toggle d-xl-none bi bi-list me-2"></i>
+      <a class="btn-getstarted" href="index.html#about">Book Now <i class="bi bi-telephone-fill"></i>
+</a>
+
+    </div>
+    
   </div>
 </header>
+
 
 
   <main class="main">
