--- a/index.html
+++ b/index.html
@@ -50,28 +50,28 @@
       <ul>
         <li><a href="#hero" class="active">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li class="dropdown"><a href="#"><span>Product</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+        <li class="dropdown"><a href="#portfolio"><span>Product</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
           <ul>
 
-            <li class="dropdown"><a href="#"><span>Keratin Hair Extensions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <li class="dropdown"><a href="#portfolio" onclick="document.getElementById('filter-app').click()"><span>Keratin Hair Extensions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
-                <li><a href="#">Flat-Tip</a></li>
-                <li><a href="#">I-Tip</a></li>
-                <li><a href="#">Nano-ring</a></li>
+                <li><a href="#portfolio" onclick="document.getElementById('filter-app').click()">Flat-Tip</a></li>
+                <li><a href="#portfolio" onclick="document.getElementById('filter-app').click()">I-Tip</a></li>
+                <li><a href="#portfolio" onclick="document.getElementById('filter-app').click()">Nano-ring</a></li>
               </ul>
             </li>
-            <li class="dropdown"><a href="#"><span>Weft Hair Extensions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <li class="dropdown"><a href="#portfolio" onclick="document.getElementById('filter-product').click()"><span>Weft Hair Extensions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
-                <li><a href="#">Machine Weft</a></li>
-                <li><a href="#">Genius Weft</a></li>
-                <li><a href="#">Hand-tied Weft</a></li>
-                <li><a href="#">Butterfly Weft</a></li>
+                <li><a href="#portfolio" onclick="document.getElementById('filter-product').click()">Machine Weft</a></li>
+                <li><a href="#portfolio" onclick="document.getElementById('filter-product').click()">Genius Weft</a></li>
+                <li><a href="#portfolio" onclick="document.getElementById('filter-product').click()">Hand-tied Weft</a></li>
+                <li><a href="#portfolio" onclick="document.getElementById('filter-product').click()">Butterfly Weft</a></li>
               </ul>
             </li>
-            <li class="dropdown"><a href="#"><span>Tape-in Hair Extensions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <li class="dropdown"><a href="#portfolio" onclick="document.getElementById('filter-branding').click()"><span>Tape-in Hair Extensions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
-                <li><a href="#">Invisible Tape-in</a></li>
-                <li><a href="#">Regular Tape-in</a></li>
+                <li><a href="#portfolio" onclick="document.getElementById('filter-branding').click()">Invisible Tape-in</a></li>
+                <li><a href="#portfolio" onclick="document.getElementById('filter-branding').click()">Regular Tape-in</a></li>
               </ul>
             </li>
             <!-- <li><a href="#">Dropdown 2</a></li> -->
@@ -1001,7 +1001,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Portfolio</h2>
+        <h2>Product</h2>
         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
@@ -1009,21 +1009,22 @@
 
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
 
-          <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
-            <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-app">App</li>
-            <li data-filter=".filter-product">Product</li>
-            <li data-filter=".filter-branding">Branding</li>
-            <li data-filter=".filter-books">Books</li>
+          <ul id="portfolio-flters" class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
+            <li id="filter-all" data-filter="*" class="filter-active">All</li>
+            <li id="filter-app" data-filter=".filter-app">Keratin Hair Extensions</li>
+            <li id="filter-product" data-filter=".filter-product">Weft Hair Extensions</li>
+            <li id="filter-branding" data-filter=".filter-branding">Tape-in Hair Extensions</li>
+            <li id="filter-books" data-filter=".filter-books">Books</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/portfolio-1.webp" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/portfolio-1.webp" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/test-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/test-1.jpg
+                  " class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
-                  <h4><a href="portfolio-details.html" title="More Details">App 1</a></h4>
+                  <h4><a href="portfolio-details.html" title="More Details">Keratin Hair Extensions - Flat-tip</a></h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
                 </div>
               </div>
@@ -1031,7 +1032,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/portfolio-10.webp" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/portfolio-10.webp" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/test-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/test-1.jpg" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="portfolio-details.html" title="More Details">Product 1</a></h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -1041,7 +1042,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/portfolio-7.webp" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/portfolio-7.webp" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/test-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/test-1.jpg" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="portfolio-details.html" title="More Details">Branding 1</a></h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -1051,7 +1052,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/portfolio-4.webp" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/portfolio-4.webp" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/test-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/test-1.jpg" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="portfolio-details.html" title="More Details">Books 1</a></h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -1061,7 +1062,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/portfolio-2.webp" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/portfolio-2.webp" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/test-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/test-1.jpg" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="portfolio-details.html" title="More Details">App 2</a></h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -1071,7 +1072,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/portfolio-11.webp" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/portfolio-11.webp" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/test-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/test-1.jpg" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="portfolio-details.html" title="More Details">Product 2</a></h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -1081,7 +1082,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/portfolio-8.webp" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/portfolio-8.webp" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/test-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/test-1.jpg" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="portfolio-details.html" title="More Details">Branding 2</a></h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -1091,7 +1092,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/portfolio-5.webp" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/portfolio-5.webp" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/test-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/test-1.jpg" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="portfolio-details.html" title="More Details">Books 2</a></h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -1101,7 +1102,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/portfolio-3.webp" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/portfolio-3.webp" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/test-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/test-1.jpg" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="portfolio-details.html" title="More Details">App 3</a></h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -1111,7 +1112,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/portfolio-12.webp" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/portfolio-12.webp" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/test-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/test-1.jpg" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="portfolio-details.html" title="More Details">Product 3</a></h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -1121,7 +1122,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/portfolio-9.webp" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/portfolio-9.webp" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/test-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/test-1.jpg" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="portfolio-details.html" title="More Details">Branding 3</a></h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
@@ -1131,7 +1132,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
               <div class="portfolio-content h-100">
-                <a href="assets/img/portfolio/portfolio-6.webp" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/portfolio-6.webp" class="img-fluid" alt=""></a>
+                <a href="assets/img/portfolio/test-1.jpg" data-gallery="portfolio-gallery-app" class="glightbox"><img src="assets/img/portfolio/test-1.jpg" class="img-fluid" alt=""></a>
                 <div class="portfolio-info">
                   <h4><a href="portfolio-details.html" title="More Details">Books 3</a></h4>
                   <p>Lorem ipsum, dolor sit amet consectetur</p>
